--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <title>mediaFork</title>
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body class="template-dark">
     <header class="header">
@@ -24,6 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
                 <button class="nav-burger"><i class="fa fa-bars" aria-hidden="true"></i></button>
+                <button class="nav-arrow"> <i class="fa fa-angle-up" aria-hidden="true"></i></button>
             </nav>
         </div>
     </header>
@@ -180,6 +182,7 @@
             <li><a class="footer-legal-link" href="#">Cookies</a></li>
             <li><a class="footer-legal-link" href="#">Site map</a></li>
         </ul>
+    </body>
+    <script type="text/javascript" src="js/script.js"></script>
     </footer>
-</body>
 </html>
