modal div created

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                         </div>
                     </li>
                 </ul>
+                <div class="modal"></div>
             </div>
         </section>
         <section id="portfolio" class="section">
