HTml modal done

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
                         </div>
                     </li>
                 </ul>
-                <div class="modal"></div>
+                <div class="modal">
+                    <div class="modal-content">
+                        <h3 class="modal-title">Modal Title</h3>
+                        <p class="modal-text">Modal text</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="portfolio" class="section">
