HMTL modal update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="modal">
                     <div class="modal-content">
                         <h3 class="modal-title">Modal Title</h3>
-                        <p class="modal-text">Modal text</p>
+                        <p class="modal-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis architecto in necessitatibus eveniet. Labore cum quae recusandae iste, ullam illo libero ratione, facilis et quod nisi. Ipsam quod porro magnam. </p>
                     </div>
                 </div>
             </div>
