modal added in html and css

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                 </ul>
                 <div class="modal">
                     <div class="modal-content">
+                        <button class="close-button"><i class="fa fa-times" aria-hidden="true"></i>
+                        </i></button>
                         <h3 class="modal-title">Modal Title</h3>
                         <p class="modal-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis architecto in necessitatibus eveniet. Labore cum quae recusandae iste, ullam illo libero ratione, facilis et quod nisi. Ipsam quod porro magnam. </p>
                     </div>
