working on modal features

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </div>
                     </li>
                 </ul>
-                <div class="modal">
+                <div id="card-modal" class="modal">
                     <div class="modal-content">
                         <button class="close-button"><i class="fa fa-times" aria-hidden="true"></i>
                         </i></button>
