data added to card for modal

--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
             <div id="services" class="section">
                 <ul class="cards-list">
                     <li>
-                        <div class="card">
+                        <div class="card" data-title="Spread your ideas worldwide" data-description="The most challenging part of your plan is to spread your ideas and services all over the world. Give us your trust !">
                             <h3 class="card-ttl">Spread your ideas worldwide</h3>
                             <img class="card-icon" src="img/icon-web.png" alt="Web services">
                         </div>
                     </li>
                     <li>
-                        <div class="card">
+                        <div class="card" data-title="IT experts for you in no time" data-description="Our IT expert team is available 24 7 and will support you to solve your problem whenever it comes over.">
                             <h3 class="card-ttl">IT experts for you in no time</h3>
                             <img class="card-icon" src="img/icon-time.png" alt="Quick">
                         </div>
                     </li>
                     <li>
-                        <div class="card">
+                        <div class="card" data-title="Websites available on all devices" data-description="Designers and developers work together to bring you unique and highly valuable web interfaces declined for all the digital devices available on the market.">
                             <h3 class="card-ttl">Websites available on all devices</h3>
                             <img class="card-icon" src="img/icon-phone.png" alt="Mobile expert">
                         </div>
                     </li>
                     <li>
-                        <div class="card">
+                        <div class="card" data-title="Creative team and fancy ideas" data-description="Web design trends are constantly changing. We are always looking for new ways to attract new customers to your business. Let the latest web trends inspire you.">
                             <h3 class="card-ttl">Creative team and fancy ideas</h3>
                             <img class="card-icon" src="img/icon-lightbulb.png" alt="Creative">
                         </div>
@@ -84,8 +84,8 @@
                     <div class="modal-content">
                         <button class="close-button"><i class="fa fa-times" aria-hidden="true"></i>
                         </i></button>
-                        <h3 class="modal-title">Modal Title</h3>
-                        <p class="modal-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis architecto in necessitatibus eveniet. Labore cum quae recusandae iste, ullam illo libero ratione, facilis et quod nisi. Ipsam quod porro magnam. </p>
+                        <h3 id="card-modal-title" class="modal-title">Modal Title</h3>
+                        <p id="card-modal-txt" class="modal-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis architecto in necessitatibus eveniet. Labore cum quae recusandae iste, ullam illo libero ratione, facilis et quod nisi. Ipsam quod porro magnam. </p>
                     </div>
                 </div>
             </div>
