modal bg added in css and html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <title>mediaFork</title>
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
+
 <body class="template-dark">
     <header class="header">
         <div class="header-container container">
@@ -35,7 +37,7 @@
             <h2 class="hero-ttl">
                 <p>Awesome agency</p>
                 <p>Beautiful project</p>
-            </h2> 
+            </h2>
             <a class="button-scroll" href="#main"><i class="fa fa-angle-down" aria-hidden="true"></i></a>
         </div>
     </div>
@@ -44,48 +46,61 @@
             <div class="about">
                 <p class="about-text about-text-xl">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    <span class="about-text-highlight">nihil quidem facere</span>  
+                    <span class="about-text-highlight">nihil quidem facere</span>
                 </p>
                 <div class="about-text">
                     <h3 class="about-ttl-sm">Lorem ipsum dolor sit amet</h3>
                     <p class="about-txt-sm">
-                        Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim 
+                        Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                        aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
+                        suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in
+                        hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla
+                        facilisis at vero eros et accumsan et iusto odio dignissim
                     </p>
                 </div>
             </div>
             <div id="services" class="section">
                 <ul class="cards-list">
                     <li>
-                        <div class="card" data-title="Spread your ideas worldwide" data-description="The most challenging part of your plan is to spread your ideas and services all over the world. Give us your trust !">
+                        <div class="card" data-title="Spread your ideas worldwide"
+                            data-description="The most challenging part of your plan is to spread your ideas and services all over the world. Give us your trust !">
                             <h3 class="card-ttl">Spread your ideas worldwide</h3>
                             <img class="card-icon" src="img/icon-web.png" alt="Web services">
                         </div>
                     </li>
                     <li>
-                        <div class="card" data-title="IT experts for you in no time" data-description="Our IT expert team is available 24 7 and will support you to solve your problem whenever it comes over.">
+                        <div class="card" data-title="IT experts for you in no time"
+                            data-description="Our IT expert team is available 24 7 and will support you to solve your problem whenever it comes over.">
                             <h3 class="card-ttl">IT experts for you in no time</h3>
                             <img class="card-icon" src="img/icon-time.png" alt="Quick">
                         </div>
                     </li>
                     <li>
-                        <div class="card" data-title="Websites available on all devices" data-description="Designers and developers work together to bring you unique and highly valuable web interfaces declined for all the digital devices available on the market.">
+                        <div class="card" data-title="Websites available on all devices"
+                            data-description="Designers and developers work together to bring you unique and highly valuable web interfaces declined for all the digital devices available on the market.">
                             <h3 class="card-ttl">Websites available on all devices</h3>
                             <img class="card-icon" src="img/icon-phone.png" alt="Mobile expert">
                         </div>
                     </li>
                     <li>
-                        <div class="card" data-title="Creative team and fancy ideas" data-description="Web design trends are constantly changing. We are always looking for new ways to attract new customers to your business. Let the latest web trends inspire you.">
+                        <div class="card" data-title="Creative team and fancy ideas"
+                            data-description="Web design trends are constantly changing. We are always looking for new ways to attract new customers to your business. Let the latest web trends inspire you.">
                             <h3 class="card-ttl">Creative team and fancy ideas</h3>
                             <img class="card-icon" src="img/icon-lightbulb.png" alt="Creative">
                         </div>
                     </li>
                 </ul>
                 <div id="card-modal" class="modal">
-                    <div class="modal-content">
-                        <button class="close-button"><i class="fa fa-times" aria-hidden="true"></i>
-                        </i></button>
-                        <h3 id="card-modal-title" class="modal-title">Modal Title</h3>
-                        <p id="card-modal-txt" class="modal-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis architecto in necessitatibus eveniet. Labore cum quae recusandae iste, ullam illo libero ratione, facilis et quod nisi. Ipsam quod porro magnam. </p>
+                    <div class="modal-bg">
+                        <div class="modal-content">
+                            <button class="close-button"><i class="fa fa-times" aria-hidden="true"></i>
+                            </i></button>
+                            <h3 id="card-modal-title" class="modal-title">Modal Title</h3>
+                            <p id="card-modal-txt" class="modal-text">Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Nobis architecto in necessitatibus eveniet. Labore cum quae recusandae
+                                iste, ullam illo libero ratione, facilis et quod nisi. Ipsam quod porro magnam. </p>
+                        </div>
+                        <img id="card-modal-img" class="modal-img" src="img/icon-lightbulb.png" alt="Creative">
                     </div>
                 </div>
             </div>
@@ -97,40 +112,40 @@
             </div>
             <ul class="portfolio-grid">
                 <li>
-                    <img  class="portfolio-img" src="img/project-1.jpg" alt="Roll the Dole">
+                    <img class="portfolio-img" src="img/project-1.jpg" alt="Roll the Dole">
                     <a href="#" class="portfolio-block">
                         <span class="portfolio-brand">Roll the Dole</span>
-                    </a> 
+                    </a>
                 </li>
                 <li>
-                    <img  class="portfolio-img" src="img/project-2.jpg" alt="Hambone">
+                    <img class="portfolio-img" src="img/project-2.jpg" alt="Hambone">
                     <a href="#" class="portfolio-block">
                         <span class="portfolio-brand">Hambone</span>
-                    </a> 
+                    </a>
                 </li>
                 <li>
-                    <img  class="portfolio-img" src="img/project-3.jpg" alt="Stewit">
+                    <img class="portfolio-img" src="img/project-3.jpg" alt="Stewit">
                     <a href="#" class="portfolio-block">
                         <span class="portfolio-brand">Stewit</span>
-                    </a> 
+                    </a>
                 </li>
                 <li>
-                    <img  class="portfolio-img" src="img/project-4.jpg" alt="Zoonic">
+                    <img class="portfolio-img" src="img/project-4.jpg" alt="Zoonic">
                     <a href="#" class="portfolio-block">
                         <span class="portfolio-brand">Zoonic</span>
-                    </a> 
+                    </a>
                 </li>
                 <li>
-                    <img  class="portfolio-img" src="img/project-5.jpg" alt="Thin Curve">
+                    <img class="portfolio-img" src="img/project-5.jpg" alt="Thin Curve">
                     <a href="#" class="portfolio-block">
                         <span class="portfolio-brand">Thin Curve</span>
-                    </a> 
+                    </a>
                 </li>
                 <li>
-                    <img  class="portfolio-img" src="img/project-6.jpg" alt="Who cares">
+                    <img class="portfolio-img" src="img/project-6.jpg" alt="Who cares">
                     <a href="#" class="portfolio-block">
                         <span class="portfolio-brand">Who cares</span>
-                    </a> 
+                    </a>
                 </li>
             </ul>
         </section>
@@ -160,7 +175,8 @@
                     <li class="contact-item contact-consent">
                         <input class="contact-checkbox" type="checkbox" id="consent" name="consent">
                         <label class="contact-label" for="consent">
-                            I accept the terms and conditions lorem ipsum dolor sit amet llamcorper suscipit lobortis nisl ut aliquip ex ea commodo
+                            I accept the terms and conditions lorem ipsum dolor sit amet llamcorper suscipit lobortis
+                            nisl ut aliquip ex ea commodo
                         </label>
                     </li>
                     <li class="contact-item contact-submit">
@@ -190,7 +206,8 @@
             <li><a class="footer-legal-link" href="#">Cookies</a></li>
             <li><a class="footer-legal-link" href="#">Site map</a></li>
         </ul>
-    </body>
-    <script type="text/javascript" src="js/script.js"></script>
-    </footer>
+</body>
+<script type="text/javascript" src="js/script.js"></script>
+</footer>
+
 </html>
