--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
                 <ul class="cards-list">
                     <li>
                         <div class="card" data-title="Spread your ideas worldwide"
-                            data-description="The most challenging part of your plan is to spread your ideas and services all over the world. Give us your trust !">
+                            data-description="The most challenging part of your plan is to spread your ideas and services all over the world. Give us your trust !" data-img="img/icon-web.png">
                             <h3 class="card-ttl">Spread your ideas worldwide</h3>
                             <img class="card-icon" src="img/icon-web.png" alt="Web services">
                         </div>
                     </li>
                     <li>
                         <div class="card" data-title="IT experts for you in no time"
-                            data-description="Our IT expert team is available 24 7 and will support you to solve your problem whenever it comes over.">
+                            data-description="Our IT expert team is available 24 7 and will support you to solve your problem whenever it comes over." data-img="img/icon-time.png">
                             <h3 class="card-ttl">IT experts for you in no time</h3>
                             <img class="card-icon" src="img/icon-time.png" alt="Quick">
                         </div>
                     </li>
                     <li>
                         <div class="card" data-title="Websites available on all devices"
-                            data-description="Designers and developers work together to bring you unique and highly valuable web interfaces declined for all the digital devices available on the market.">
+                            data-description="Designers and developers work together to bring you unique and highly valuable web interfaces declined for all the digital devices available on the market." data-img="img/icon-phone.png">
                             <h3 class="card-ttl">Websites available on all devices</h3>
                             <img class="card-icon" src="img/icon-phone.png" alt="Mobile expert">
                         </div>
                     </li>
                     <li>
                         <div class="card" data-title="Creative team and fancy ideas"
-                            data-description="Web design trends are constantly changing. We are always looking for new ways to attract new customers to your business. Let the latest web trends inspire you.">
+                            data-description="Web design trends are constantly changing. We are always looking for new ways to attract new customers to your business. Let the latest web trends inspire you."data-img="img/icon-lightbulb.png">
                             <h3 class="card-ttl">Creative team and fancy ideas</h3>
                             <img class="card-icon" src="img/icon-lightbulb.png" alt="Creative">
                         </div>
