--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="modal-bg">
                         <div class="modal-content">
                             <button class="close-button"><i class="fa fa-times" aria-hidden="true"></i>
-                            </i></button>
+                            </button>
                             <h3 id="card-modal-title" class="modal-title">Modal Title</h3>
                             <p id="card-modal-txt" class="modal-text">Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Nobis architecto in necessitatibus eveniet. Labore cum quae recusandae
